@@ -19,15 +19,15 @@ DISTCLEANFILES= mono.pc
 fullbuild: remove-binaries mcs-tree-safe-build xinstall-runtime mcs-rest install
 
 mcs-tree-safe-build:
-	(cd ../mcs/jay; make)
-	(cd ../mcs/mcs; make MCS=mcs)
-	(cd ../mcs/class/corlib; make MCS=mcs)
+	(cd ../mcs/jay; $(MAKE))
+	(cd ../mcs/mcs; $(MAKE) MCS=mcs)
+	(cd ../mcs/class/corlib; $(MAKE) MCS=mcs)
 	cp ../mcs/class/lib/corlib.dll runtime
 	cp ../mcs/mcs/mcs.exe runtime
 
 xinstall-runtime:
-	if echo $(SUBDIRS) | grep "libgc " > /dev/null; then (cd libgc; make && make install); fi
-	(cd mono; make && make install)
+	if echo $(SUBDIRS) | grep "libgc " > /dev/null; then (cd libgc; $(MAKE) && $(MAKE) install); fi
+	(cd mono; $(MAKE) && $(MAKE) install)
 
 mcs-rest:
 	(cd ../mcs/class; make)
