@@ -1,3 +1,8 @@
+2003-08-27  Zoltan Varga  <vargaz@freemail.hu>
+
+	* Makefile.am: Use $(MAKE) instead of make. Patch by Bernie Solomon
+	(bernard@ugsolutions.com).
+
 2003-08-25  Zoltan Varga  <vargaz@freemail.hu>
 
 	* mono.pc.in: Added gthread-2.0.
